styl(all): 降低jdk版本